--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>jackie-tool</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
+    <name>Jackie Tool</name>
+    <description>some utils for java , such as bean convert, security , and so on</description>
+    <url>https://github.com/jackieonway/jackie-tool</url>
     <properties>
         <java.encoding>UTF-8</java.encoding>
         <java.version>1.8</java.version>
