--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,12 @@
             <version>1.11.3</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>reflectasm</artifactId>
+            <version>1.11.9</version>
+        </dependency>
     </dependencies>
 
    <distributionManagement>
