--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>com.github.jackieonway.util</groupId>
     <artifactId>jackie-tool</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Jackie Tool</name>
-    <description>some utils for java , such as bean convert, security , and so on</description>
+    <description>some utils for java , such as bean convert, security, and so on</description>
     <url>https://github.com/jackieonway/jackie-tool</url>
     <properties>
         <java.encoding>UTF-8</java.encoding>
