--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <java.encoding>UTF-8</java.encoding>
         <java.version>1.8</java.version>
         <encoding>UTF-8</encoding>
+        <zxing.version>3.4.1</zxing.version>
 		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     </properties>
     <dependencies>
@@ -67,7 +68,14 @@
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>core</artifactId>
-            <version>3.3.3</version>
+            <version>${zxing.version}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>${zxing.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -145,25 +153,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-            <version>2.1.5.RELEASE</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>3.0.1</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>3.4.14</version>
-            <type>pom</type>
             <optional>true</optional>
         </dependency>
         <dependency>
